--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Nice One, Dad</h1>
+  <div>
+    <a href="#" onclick="getJoke()">Get Joke</a>
+    <div id="joke"></div>
+  </div>
 
-  
 
+
+  <script src="index.js"></script>
 </body>
 </html>
