set div to render content, change div name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div>
     <a href="#" onclick="getJoke()">Get Joke</a>
-    <div id="joke"></div>
+    <div id="dadJoke"></div>
   </div>
 
 
