--- a/index.html
+++ b/index.html
@@ -4,15 +4,56 @@
   <title>Nice One, Dad</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
+<style>
+  * {}
+  .content {
+    max-width: 500px;
+    margin: auto;
+  }
+  img {
+    padding-top: 50%;
+    width: 100%;
+    background-color: red;
+    height: auto;
+  }
+  .speech-bubble {
+	  position: relative;
+	  background: #00aabb;
+  	border-radius: .4em;
+}
+  .speech-bubble:after {
+    content: '';
+	  position: absolute;
+	  left: 0%;
+	  top: 50%;
+	  width: 0;
+	  height: 0;
+	  border: 32px solid transparent;
+	  border-right-color: #00aabb;
+  	border-left: 0;
+  	border-bottom: 0;
+  	margin-top: -16px;
+  	margin-left: -32px;
+}
+
+</style>
 <body>
-  <div>
-    <a href="#" onclick="getJoke()">Get Joke</a>
-    <div id="dadJoke"></div>
-  </div>
-
-
-
+  <div class="row">
+    <div class="side">
+      <img src=dad_image.png>
+        <div class="main">
+          <div class="speech-bubble">
+            <div class="content">
+              <div id="jokeLink">
+                <a href="#" onclick="getJoke()">Get Joke</a>
+              <div id="dadJoke"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   <script src="index.js"></script>
 </body>
 </html>
