--- a/index.html
+++ b/index.html
@@ -5,55 +5,76 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<style>
-  * {}
-  .content {
-    max-width: 500px;
-    margin: auto;
-  }
-  img {
-    padding-top: 50%;
-    width: 100%;
-    background-color: red;
-    height: auto;
-  }
-  .speech-bubble {
-	  position: relative;
-	  background: #00aabb;
-  	border-radius: .4em;
-}
-  .speech-bubble:after {
-    content: '';
-	  position: absolute;
-	  left: 0%;
-	  top: 50%;
-	  width: 0;
-	  height: 0;
-	  border: 32px solid transparent;
-	  border-right-color: #00aabb;
-  	border-left: 0;
-  	border-bottom: 0;
-  	margin-top: -16px;
-  	margin-left: -32px;
+  <style>
+    img {
+      /* padding-top: 50%; */
+      width: 50;
+      /* height: auto; */
+    }
+    .bubble {
+    background-color: #fff;
+    -webkit-border-radius:7px;
+    -moz-border-radius:7px;
+    border-radius: 7px;
+    border: 2px solid #DD4814;
+    -webkit-filter: drop-shadow(4px 4px 5px rgba(0,0,0,0.5));
+    -moz-filter: drop-shadow(4px 4px 5px rgba(0,0,0,0.5));
+    -ms-filter: drop-shadow(4px 4px 5px rgba(0,0,0,0.5));
+    -o-filter: drop-shadow(4px 4px 5px rgba(0,0,0,0.5));
+    box-shadow: inset 0 1px 1px hsla(0,0%,100%,.5), 4px 4px 0 hsla(0,0%,0%,.2);
+    color: #333;
+    font-family: Ubuntu, sans-serif;
+    font: 16px/25px;
+    padding: 15px 25px;
+    position: absolute;
+    right: 0;
+    top: -120px;
+    width: 260px;
 }
 
-</style>
+main {
+    display: inline-block;
+    margin:15px 0 2em 85px;
+    font-style:italic;
+    position: relative;
+    top: 200px;
+    left: 200px;
+}
+
+.bubble:after, .bubble:before {
+    border-bottom: 25px solid transparent;
+    border-left: 25px solid #fff;
+    bottom: -25px;
+    content: '';
+    position: absolute;
+    left: 25px;
+}
+.bubble:before {
+    border-left: 25px solid hsla(0,0%,0%,.1);
+    bottom: -28px;
+    left: 22px;
+    z-index: 1;
+}
+.bubble:before {
+    border-left: 27px solid #DD4814;
+    border-bottom: 27px solid transparent;
+    bottom: -29px;
+    left: 23px;
+    z-index: 0;
+}
+
+  </style>
+</head>
 <body>
-  <div class="row">
-    <div class="side">
+  <main>
       <img src=dad_image.png>
-        <div class="main">
-          <div class="speech-bubble">
-            <div class="content">
-              <div id="jokeLink">
-                <a href="#" onclick="getJoke()">Get Joke</a>
-              <div id="dadJoke"></div>
-            </div>
-          </div>
+        <div class="bubble" placeholder="Hey, have you heard this one?">
+          <div id="dadJoke"></div>
         </div>
+      <div id="jokeLink">
+        <a href="#" onclick="getJoke()">Get Joke</a>
       </div>
-    </div>
+    </main>
   <script src="index.js"></script>
 </body>
 </html>
