--- a/index.html
+++ b/index.html
@@ -14,28 +14,33 @@
       min-height: 100%;
     }
 
-    main {
+    /* main {
       display: inline-block;
       margin: 15px 0 2em 85px;
       font-style: italic;
       position: relative;
       top: 100px;
       left: 500px;
-    }
-
+    } */
     img {
-      /* padding-top: 50%; */
-      width: 85%;
-      /* max-width: 100%; */
-      /* height: auto; */
+      /* background-color: #f1f1f1; */
+      max-width: 100%;
+      height: auto;
+    }
+    h1 {
+      /* background-color: #f1f1f1; */
+      font-size: 5vw;
+    }
+    .container {
+      /* background-color: green; */
     }
 
     .bubble {
-    background-color: #fff;
+    background-color: white;
     -webkit-border-radius:7px;
     -moz-border-radius:7px;
     border-radius: 7px;
-    border: 2px solid #DD4814;
+    border: 2px solid #f44336;
     -webkit-filter: drop-shadow(4px 4px 5px rgba(0,0,0,0.5));
     -moz-filter: drop-shadow(4px 4px 5px rgba(0,0,0,0.5));
     -ms-filter: drop-shadow(4px 4px 5px rgba(0,0,0,0.5));
@@ -46,9 +51,10 @@
     font: 16px/25px;
     padding: 15px 25px;
     position: absolute;
-    right: 0;
-    top: -70px;
-    width: 260px;
+    right: 20%;
+    top: 0;
+    width: 25%;
+    /* height: 10%; */
 }
 
 
@@ -73,41 +79,95 @@
     left: 23px;
     z-index: 0;
 }
+
 button {
-  background-color: #fff;
+  background-color: white;
   color: black;
-  border: 2 px solid red;
+  border: 2px solid #f44336;
   border-radius: 7px;
   padding: 14px 40px;
   font-size: 25px;
   transition-duration: 0.4s;
+  position: absolute;
 }
 button:hover {
   background-color: red;
   color: white;
 }
-a {
-  text-decoration: none;
-  color: black;
+.row {
+  /* background-color: pink; */
 }
-a:hover {
-  color: white;
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
+.column {
+  /* background-color: blue; */
+  /* float: left; */
+  width: 100%;
+
+}
+.center {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+.joking-dad {
+  position: relative;
+}
+
+/* --- iPhone 6, 6s, 7, and 8 --- */
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 1200px) and (-webkit-min-device-pixel-ratio: 2) {
+  .bubble {
+    visibility: hidden;
+    right: 0;
+  }
+  #dadJoke {
+    visibility: visible;
+    text-align: center;
+    color: #f44336;
+    font-weight: bold;
+  }
+}
+
+/* @media only screen and (min-device-width: 1200px) {
+  .bubble {
+    right: 20%;
+  }
+} */
+
+
+
+
+
+
 
   </style>
 </head>
+<div class="container">
 <body>
+  <h1 class="center">Nice One, Dad</h1>
   <main>
-      <img src=dad_image.png>
-        <div class="bubble" placeholder="Hey, have you heard this one?">
-          <div id="dadJoke"></div>
-        </div>
-        <div id="jokeLink">
-          <button><a href="#" onclick="getJoke()">Get Joke</a></button>
+    <div class="row">
+      <div class="column center">
+      <div class="joking-dad">
+      <img src=dad.png>
+      <!-- </div> -->
+      <!-- <div class="column" -->
+      <div id="jokeLink">
+        <button class="center" onclick="getJoke()">Get Joke</button>
+      </div>
+      <div class="bubble">
+        <div id="dadJoke"></div>
+      </div>
+      </div>
         </div>
     </main>
     <footer>
     </footer>
   <script src="index.js"></script>
 </body>
+</div>
 </html>
