--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <br></br>
         <div id="jokeLink">
-          <button class="center" onclick="getJoke()">Tell me a joke!</button>
+          <button class="center" onclick="getJoke()">TELL ME A JOKE</button>
         </div>
       </div>
     </main>
