--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="row">
       <div class="column center">
         <div class="joking-dad">
-          <img src=dad-telling-joke.png>
+          <img src=dad-telling-joke.png alt="dad joking at dinner table">
           <br></br>
           <br></br>
           <div id="dadJoke"></div>
@@ -30,7 +30,7 @@
     </main>
     <div class="bottom-container"></div>
     <footer>
-      <p>MADE WITH &hearts; BY<strong>JEREMY SCHUURMANS</strong></p>
+      <p>MADE WITH &hearts; BY<a href="https://www.github.com/jmschuurmans/"><strong>JEREMY SCHUURMANS</strong></a></p>
     </footer>
     </div>
     <script src="index.js"></script>
