fix broken hyperlink

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </main>
     <div class="bottom-container"></div>
     <footer>
-      <p>MADE WITH &hearts; BY<a href="https://www.github.com/jmschuurmans/"><strong>JEREMY SCHUURMANS</strong></a></p>
+      <p>MADE WITH &hearts; BY<a href="https://www.github.com/jmschuurmans/" target="_blank"><strong>JEREMY SCHUURMANS</strong></a></p>
     </footer>
     </div>
     <script src="index.js"></script>
